Corrected gap in filters style

--- a/public/css/filters.styl
+++ b/public/css/filters.styl
@@ -1,10 +1,11 @@
 .filters
-  padding-top: 1em
-  padding-bottom: 0.618em
-  padding-left: 15px
-  padding-right: 15px
+  padding: 1em 15px 0.382em
   margin-left: 0.382em
   margin-right: 0em
+  &:after
+    content: ""
+    display: table
+    clear: both
   ul
     float: left
     list-style: none
